objects/Contact/fields/QtrlyCheck__c.field-meta.xml
<CustomField>
    <fullName>QtrlyCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this box if the quarterly check is complete.</inlineHelpText>
    <label>Quarterly Check</label>
    <type>Checkbox</type>
</CustomField>